--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>fr.cirad</groupId>
     <artifactId>role_manager</artifactId>
     <name>Spring-based role management addon</name>
-    <version>1.0-alpha</version>
+    <version>1.0-beta</version>
    	<packaging>jar</packaging>
     
     <description>
